--- a/src/SCSS/_navigation.scss
+++ b/src/SCSS/_navigation.scss
@@ -8,126 +8,133 @@
     padding: 1rem 3rem;
   
     .headerContainer {
-      display: flex;
-      align-items: center;
-  
-      max-width: var(--site-width);
-      width: 100%;
-  
-      &__hamburgerMenu {
-        display: none;
-        background-color: var(--font-color);
-        height: 2px;
-        width: 1.2rem;
-        cursor: pointer;
-        margin-right: 1rem;
-  
-        &::before,
-        &::after {
-          content: "";
-          background-color: var(--font-color);
-          height: 2px;
-          width: 1.2rem;
-          cursor: pointer;
-          display: block;
-        }
-  
-        &::before {
-          transform: translateY(-7px);
-        }
-  
-        &::after {
-          transform: translateY(5px);
-        }
-      }
-  
-      a {
-        color: black;
         display: flex;
         align-items: center;
-      }
+    
+        max-width: var(--site-width);
+        width: 100%;
   
-      &__searchBox {
-        max-width: 420px;
-        flex: 1 auto;
-        margin: 0 1rem;
+    //   &__hamburgerMenu {
+    //     // display: none;
+    //     background-color: var(--font-color);
+    //     height: 2px;
+    //     width: 1.2rem;
+    //     cursor: pointer;
+    //     margin-right: 1rem;
   
-        form {
-          input {
-            outline: 0;
+    //     &::before,
+    //     &::after {
+    //       content: "";
+    //       background-color: var(--font-color);
+    //       height: 2px;
+    //       width: 1.2rem;
+    //       cursor: pointer;
+    //       display: block;
+    //     }
   
-            background-color: var(--main-0);
+    //     &::before {
+    //       transform: translateY(-7px);
+    //     }
   
-            padding: 0.6rem;
-            border-radius: 5px;
-            font-size: 1rem;
-            border: 1px solid var(--main-3);
-            width: 100%;
-  
-            &:focus {
-              background-color: var(--header-bg);
-  
-              box-shadow: 1px 1px var(--main-theme);
-            }
-          }
-        }
-      }
-  
-      &__right {
-        display: flex;
-        align-items: center;
-        margin-left: auto;
-  
-        button {
-          background-color: var(--main-theme);
-          color: var(--header-bg);
-          padding: 0.5rem 1rem;
-          border-radius: 5px;
-          margin-right: 0.5rem;
-  
-          &:hover {
-            background-color: var(--main-theme-darker);
-          }
-        }
-  
-        .hidden-search {
-          display: none;
-        }
-  
-        i {
-          margin: 0 1rem;
-          font-size: 1.6rem;
-          display: flex;
-          align-items: center;
-          color: var(--main-8);
-          border-radius: 50%;
-          cursor: pointer;
-  
-          &:hover {
-            box-shadow: 0 0 0 10px rgba($color: #000000, $alpha: 0.05);
-            background-color: rgba($color: #000000, $alpha: 0.05);
-            color: var(--font-color);
-            z-index: 1;
-          }
-        }
-  
-        span {
-          height: 2rem;
-          width: 2rem;
-          margin: 0 1rem;
-  
-          img {
-            border-radius: 50%;
-            width: 100%;
-            height: 100%;
-            display: inline-block;
+    //     &::after {
+    //       transform: translateY(5px);
+    //     }
+    //   }
+
+        &__hamburgerMenu {
+            margin-right: 1rem;
             cursor: pointer;
-            &:hover {
-              box-shadow: 0 0 0 5px rgba($color: #000000, $alpha: 0.05);
-            }
-          }
+            display: none;
         }
-      }
+        
+  
+        a {
+            color: black;
+            display: flex;
+            align-items: center;
+        }
+    
+        &__searchBox {
+            max-width: 420px;
+            flex: 1 auto;
+            margin: 0 1rem;
+    
+            form {
+            input {
+                outline: 0;
+    
+                background-color: var(--main-0);
+    
+                padding: 0.6rem;
+                border-radius: 5px;
+                font-size: 1rem;
+                border: 1px solid var(--main-3);
+                width: 100%;
+    
+                &:focus {
+                background-color: var(--header-bg);
+    
+                box-shadow: 1px 1px var(--main-theme);
+                }
+            }
+            }
+        }
+    
+        &__right {
+            display: flex;
+            align-items: center;
+            margin-left: auto;
+    
+            button {
+            background-color: var(--main-theme);
+            color: var(--header-bg);
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            margin-right: 0.5rem;
+    
+            &:hover {
+                background-color: var(--main-theme-darker);
+            }
+            }
+    
+            .hidden-search {
+            display: none;
+            }
+    
+            i {
+            margin: 0 1rem;
+            font-size: 1.6rem;
+            display: flex;
+            align-items: center;
+            color: var(--main-8);
+            border-radius: 50%;
+            cursor: pointer;
+    
+            &:hover {
+                box-shadow: 0 0 0 10px rgba($color: #000000, $alpha: 0.05);
+                background-color: rgba($color: #000000, $alpha: 0.05);
+                color: var(--font-color);
+                z-index: 1;
+            }
+            }
+    
+            span {
+            height: 2rem;
+            width: 2rem;
+            margin: 0 1rem;
+    
+            img {
+                border-radius: 50%;
+                width: 100%;
+                height: 100%;
+                display: inline-block;
+                cursor: pointer;
+                &:hover {
+                box-shadow: 0 0 0 5px rgba($color: #000000, $alpha: 0.05);
+                }
+            }
+            }
+        }
     }
   
     .dropdown-menu-close {
