--- a/src/SCSS/_navigation.scss
+++ b/src/SCSS/_navigation.scss
@@ -165,10 +165,10 @@
           small {
             color: var(--main-5);
           }
-          a { 
-              text-decoration: none;
-              color: #000000;
-          }
+          // a { 
+          //     text-decoration: none;
+          //     color: #000000;
+          // }
         }
   
         li:first-child {
